# ainject

./: .gitignore  readme.md  setup.cfg  setup.py
ainject/: __init__.py  ainject.py
tests/: conftest.py  test_class.py  test_errors.py  test_func.py
