[metadata]
name = ainject
version = attr: ainject.__version__
url = https://github.com/pohmelie/ainject
author = pohmelie
author_email = multisosnooley@gmail.com
description = Simple asynchronous dependency injector for python
long_description = file: readme.md
license = file: license.txt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = ainject
tests_require =
    pytest
    pytest-asyncio
    pytest-cov

[tool:pytest]
addopts = --cov ainject/
